Widen flight column to 130px to prevent character squishing

--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,7 @@ header {
 .col-expected { width: 85px; }
 .col-actual { width: 85px; }
 .col-destination { width: 65px; }
-.col-flight { width: 100px; }
+.col-flight { width: 130px; }
 .col-gate { width: 65px; }
 .col-status { width: 160px; }
 
